# python-project-52

./: .gitignore  Makefile  README.md  config.py  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: main.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_data.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_labels_and_more.py  0003_alter_task_description_alter_task_executor_and_more.py  0004_alter_task_executor.py
task_manager/templates/: index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/users/migrations/: 0001_initial.py
